Added a maximize button for images

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 	</head>
 	<body>
 		<div id="main">
-			<h1>Team 1288 Remige Driver Station</h1>
+			<div id="streams">
+				<span id="maximize" title="Toggle maximized"></span>
+			</div>
 			<form id="remige">
+				<h1>Team 1288 Remige Driver Station</h1>
 				<p>During Autonomous the robot should:</p>
 				<section>
 					<h2>Move In Direction</h2>
@@ -66,8 +69,6 @@
 					</span>
 				</section>
 			</form>
-			<div id="streams">
-			</div>
 		</div>
 		<div id="status">
 			<section>
