Lots of fixes and tweaks
* buttons show better when disabled, and are by default
* connection statuses color coded
* added error images
* buttons cannot be clicked when maximized
* layout tweaks

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</div>
 			<form id="remige">
 				<h1>Team 1288 Remige Driver Station</h1>
-				<p>During Autonomous the robot should:</p>
+				<p>During Autonomous the robot should</p>
 				<section>
 					<h2>Move In Direction</h2>
 					<span>
@@ -72,10 +72,10 @@
 		</div>
 		<div id="status">
 			<section>
-				<span>Remige Connection:</span> <span id="server-connection">?</span>
+				<span>Remige Connection:</span> <span id="server-connection">Initializing WebSockets</span>
 			</section>
 			<section>
-				<span>Robot Connection:</span> <span id="robot-connection">?</span>
+				<span>Robot Connection:</span> <span id="robot-connection">Awaiting Remige Connection</span>
 			</section>
 		</div>
 	</body>
